# rust_merkle_server

./: Cargo.toml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
src/handlers/: get_balance.rs  get_map.rs  health.rs  mod.rs  mutate_map.rs
src/models/: app_state.rs  merkle_map.rs  mod.rs  mutation.rs
src/utils/: logger.rs  mod.rs
