[package]
name = "rust_merkle_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
criterion = "0.5.1"
reqwest = { version = "0.11.20", features = ["blocking"] }
tokio = "1.32.0"
mina_signer = { git = "https://github.com/o1-labs/proof-systems.git", package = "mina-signer" }
mina_hasher = { git = "https://github.com/o1-labs/proof-systems.git", package = "mina-hasher" }
mina_curves = { git = "https://github.com/o1-labs/proof-systems.git", package = "mina-curves" }
o1_utils = { git = "https://github.com/o1-labs/proof-systems.git", package = "o1-utils" }
serde_json = "1.0.105"
num-bigint = "0.4.4"
num-traits = "0.2.16"
dashmap = "5.5.3"
once_cell = "1.18.0"

[[bench]]
name = "my_benchmark"
harness = false
